--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,21 @@ html, body {
 	background-color: #101317;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+p {
+	color: white;
+	
+	padding: 20px;
+	
+	font-family: 'Merriweather';
+	font-size: 20px;
+	line-height: 1.8;
+}
+
 /* Navbar */
 .nav {
 	background-color: #101317;
@@ -54,6 +69,29 @@ html, body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
+	
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-direction: column;
+}
+
+.splash h1 {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	
+	text-align: center;
+	
+	color: #ffffff;
+	
+	font-family: 'Archivo Narrow', sans-serif;
+	font-size: 60px;
+	
+	position: absolute;
+	
+	animation-name: slide-up;
+	animation-duration: 2s;
 }
 
 /* Info */
@@ -65,15 +103,63 @@ html, body {
 }
 
 .horizontal {
-	grid-template-columns: 1fr 1fr;
-	
 	display: grid;
-	
+	grid-template-columns: 1fr 0.5fr 1fr;
 	width: 100%;
+}
+
+.image-right, .text-right {
+	width: 100%;
+	height: 100%;
+	
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-direction: column;
+	
+	text-align: left;
+	
+	float: right;
+}
+
+.image-left, .text-left {
+	width: 100%;
+	height: 100%;
+	
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-direction: column;
+	
+	text-align: right;
+	
+	float: left;
+}
+
+.gradient-right {
+	background: rgb(2,0,36);
+	background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0) 92%, rgba(0,0,0,0.5) 100%); 
+}
+
+.gradient-left {
+	background: rgb(2,0,36);
+	background: linear-gradient(-90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0) 92%, rgba(0,0,0,0.5) 100%); 
 }
 
 /* Footer */
 .footer {
 	background-color: #232529;
 	height: 10%;
+}
+
+/* Animations */
+@keyframes slide-up {
+	from {
+		color: rgba(255, 255, 255, 0);
+		padding-top: 40px;
+	}
+	to {
+		color: rgba(255, 255, 255, 1);
+		padding-top: 0px;
+	}
 }
