--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,70 @@ p {
 	line-height: 1.8;
 }
 
+/* Portfolio */
+.portfolio-container {
+	width: 100%;
+	height: 75%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.portfolio-section {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: left;
+	flex-wrap: wrap;
+}
+
+.portfolio-section h2 {
+	width: 100%;
+	flex: 0 0 100%;
+	text-align: center;
+	
+	text-decoration: none;
+	color: #ffffff;
+	font-family: 'Archivo Narrow', sans-serif;
+	font-size: 45px;
+}
+
+.portfolio-entry {
+	width: 25%;
+	height: 50%;
+	
+	background-color: white;
+	position: relative;
+	
+	box-shadow: 0px 0px 40px -9px rgba(0,0,0,0.75) inset;
+}
+
+.portfolio-entry h3 {
+	text-decoration: none;
+	color: #000000;
+	font-family: 'Archivo Narrow', sans-serif;
+	font-size: 45px;
+	text-align: center;
+}
+
+.portfolio-entry a {
+	width: 100%;
+	height: 100%;
+	
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
+}
+.portfolio-entry a span {
+	position:absolute; 
+	width:100%;
+	height:100%;
+	top:0;
+	left: 0;
+}
+
 /* Navbar */
 .nav {
 	background-color: #101317;
@@ -65,7 +129,7 @@ p {
 	width: 100%;
 	height: 90%;
 	
-	background-image: url("../img/splash.jpg");
+	background-color: #002222;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
